--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-modal": "^3.16.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-modal": "^3.16.3",
     "tailwindcss": "^3.3.3"
   }
 }
